added get all offers by company
